--- a/.gitignore
+++ b/.gitignore
@@ -107,3 +107,11 @@ Util.java
 VCLinker.java
 VectorClock.java
 *.class
+topology0
+topology1
+topology2
+topology3
+topology4
+topology5
+topology6
+topology7
